bynkc/tests/fixtures/negative/225_sum_none_not_last/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Bearer(secret = "S"), identity = UserId }

service api from http {
  on GET("/x") () -> Effect[HttpResult[String]] by who: Visitor | User {
    Ok("x")
  }
}
